--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <mat-toolbar color="primary">
   <h2 class="text-center">Angular Github User Search</h2>
-  <!-- <hr /> -->
-  <!-- <div class="nav-links">
-    <a routerLink="/home">Owner-Account</a>
-    <a routerLink="/owner">Owner Actions</a>
-  </div> -->
+  <hr />
+  <div class="nav-links">
+    <!-- <a routerLink="/home">User Search</a>
+    <a routerLink="/user-profile-card">User Profile</a>
+    <a routerLink="/user-profile-data">User Data</a>
+    <a routerLink="/user-repos">User Repos</a> -->
+  </div>
+  <!-- <router-outlet></router-outlet> -->
 </mat-toolbar>
 <div class="app-component">
   <app-github-app></app-github-app>
