--- a/src/app/components/github-repos/github-repos.component.html
+++ b/src/app/components/github-repos/github-repos.component.html
@@ -1,4 +1,4 @@
-<mat-card class="Repo">
+<mat-card class="Repo" *ngIf="githubRepos" routerLink="/user-repos">
   <mat-card-header>
     <mat-card-title class="title">Github Repositories</mat-card-title>
   </mat-card-header>
