--- a/src/app/components/github-profile-card/github-profile-card.component.html
+++ b/src/app/components/github-profile-card/github-profile-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="user-avatar">
+<mat-card class="user-avatar" routerLink="/user-profile-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title><span></span> {{ githubProfile.name }} </mat-card-title>
