--- a/src/app/components/github-profile-data/github-profile-data.component.html
+++ b/src/app/components/github-profile-data/github-profile-data.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" routerLink="user-profile-data">
   <mat-card class="profile-data">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
