--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,12 @@
   <h2 class="text-center">Angular Github User Search</h2>
   <hr />
   <div class="nav-links">
-    <!-- <a routerLink="/home">User Search</a>
     <a routerLink="/user-profile-card">User Profile</a>
     <a routerLink="/user-profile-data">User Data</a>
-    <a routerLink="/user-repos">User Repos</a> -->
+    <a routerLink="/user-repos">User Repos</a>
   </div>
-  <!-- <router-outlet></router-outlet> -->
 </mat-toolbar>
 <div class="app-component">
   <app-github-app></app-github-app>
 </div>
+<router-outlet></router-outlet>
