--- a/src/app/components/github-app/github-app.component.html
+++ b/src/app/components/github-app/github-app.component.html
@@ -6,43 +6,47 @@
   [fullScreen]="true"
   ><p style="color: white">Loading...</p></ngx-spinner
 >
-<div class="container github-app">
-  <div class="row">
-    <div class="col">
-      <mat-card class="github-class">
-        <h1 color="accent">Github User Search</h1>
-        <mat-card-header class="bg-secondary text-white"> </mat-card-header>
-        <mat-card-content>
-          <form class="form-inline" (submit)="searchUser()">
-            <div class="form-group">
-              <input
-                [(ngModel)]="githubUserQuery"
-                name="user"
-                size="20"
-                type="search"
-                class="form-control"
-                placeholder="username"
-              />
-            </div>
-            <br />
-            <div>
-              <button mat-raised-button color="accent" type="submit">
-                Search
-              </button>
-            </div>
-          </form>
-        </mat-card-content>
-      </mat-card>
+<div class="app-component">
+  <div class="container github-app">
+    <div class="row">
+      <div class="col">
+        <mat-card class="github-class">
+          <h1 color="accent">Github User Search</h1>
+          <mat-card-header class="bg-secondary text-white"> </mat-card-header>
+          <mat-card-content>
+            <form class="form-inline" (submit)="searchUser()">
+              <div class="form-group">
+                <input
+                  [(ngModel)]="githubUserQuery"
+                  name="user"
+                  size="20"
+                  type="search"
+                  class="form-control"
+                  placeholder="username"
+                />
+              </div>
+              <br />
+              <div>
+                <button mat-raised-button color="accent" type="submit">
+                  Search
+                </button>
+              </div>
+            </form>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <app-github-profile [githubProfile]="githubProfile"></app-github-profile>
+    <div class="row">
+      <div class="col">
+        <app-github-profile
+          [githubProfile]="githubProfile"
+        ></app-github-profile>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <app-github-repos [githubRepos]="githubRepos"></app-github-repos>
+    <div class="row">
+      <div class="col">
+        <app-github-repos [githubRepos]="githubRepos"></app-github-repos>
+      </div>
     </div>
   </div>
 </div>
